<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:padding="5dp"
    tools:context=".fragments.UserProfile">


    <ImageView
        android:id="@+id/dp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/dp"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintBottom_toTopOf="@id/details"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ImageContrastCheck" />

    <LinearLayout
        android:id="@+id/details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dp">

        <TextView
            android:id="@+id/userNameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:text="@string/display_name"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/inter_bold"
            android:text=""
            android:textSize="24sp" />

        <TextView
            android:id="@+id/userEmailTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:text="@string/user_email"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/inter_bold"
            android:text=""
            android:textSize="24sp" />

        <TextView
            android:id="@+id/choose_language"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/inter_extra_bold"
            android:gravity="center_vertical"
            android:text="@string/choose_language"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/inter_extra_bold"
            android:gravity="center_vertical"
            android:text="@string/sign_out"
            android:textColor="#6A61D9"
            android:textSize="24sp" />

        <Button
            android:id="@+id/deleteAccount"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="8dp"
            android:backgroundTint="#ff0000"
            android:text="@string/delete_account"
            android:textAllCaps="false"
            app:cornerRadius="10dp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prediction_note"
            android:textSize="12sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>